Add guards to String#parseInt calls